<resources>
    <string name="app_name">Gotcha</string>
    <string name="title_activity_splash">Splash</string>
    <string name="live_camera_button_text">Live Camera</string>
    <string name="tag">Gotcha</string>
    <string name="select_image_button">Open image</string>
    <string name="image_editor_button">Image Editor</string>
    <string name="image_to_edit">Image to edit</string>
    <string name="find_object_button">Find Objects</string>
    <string name="take_picture_button">Take Picture</string>

    <string name="YOLO">yolov3</string>
    <string name="MobileNetSSD">mobilenetssd</string>

    <string name="MobileNetSSD_model_file">MobileNetSSD/MobileNetSSD.caffemodel</string>
    <string name="MobileNetSSD_config_file">MobileNetSSD/MobileNetSSD.prototxt</string>
    <string name="YOLOv3_model_file">YOLO/yolov3.weights</string>
    <string name="YOLOv3_config_file">YOLO/yolov3.cfg</string>

    <string name="MobileNetSSD_model_file_url">
        http://melkor.ddns.net:1280/weights/MobileNetSSD/MobileNetSSD.caffemodel
    </string>
    <string name="MobileNetSSD_config_file_url">
        http://melkor.ddns.net:1280/weights/MobileNetSSD/MobileNetSSD.prototxt
    </string>
    <string name="YOLOv3_model_file_url">
        http://melkor.ddns.net:1280/weights/YOLO/yolov3.weights
    </string>
    <string name="YOLOv3_config_file_url">
        http://melkor.ddns.net:1280/weights/YOLO/yolov3.cfg
    </string>
    <string name="MobileNetSSD_model_name">MobileNetSSD Model</string>
    <string name="MobileNetSSD_config_name">MobileNetSSD Configuration</string>
    <string name="YOLOv3_model_name">YOLOv3 Model</string>
    <string name="YOLOv3_config_name">YOLOv3 Config</string>

    <string name="weights_path">Android/data/giorgioghisotti.unipr.it.gotcha/files/weights/</string>
    <string name="dnn_switch">Use YOLOv3 (slower but finds more objects)</string>
    <string name="scale_pictures_switch">Don\'t scale pictures (VERY SLOW)</string>
    <string name="settings_button">Settings</string>
    <string name="ndk_switch">Use sdk (slower)</string>
    <string name="download_url_button">Set weight files server url</string>
    <string name="cut_button">Cut</string>
    <string name="cutter_image_view_description">image to cut</string>
    <string name="left_arrow_button"><![CDATA[<]]></string>
    <string name="right_arrow_button"><![CDATA[>]]></string>
    <string name="export_image_view_description">Image to export</string>
    <string name="save_image_button">Save as…</string>
    <string name="cutout_file">cutout.png</string>
    <string name="preview_file">preview.png</string>
    <string name="source_file">bitmap.png</string>
    <string name="default_save_path"><b>Save path:</b>\nPictures</string>
    <string-array name="weights">
        <item>@string/MobileNetSSD_model_file</item>
        <item>@string/MobileNetSSD_config_file</item>
        <item>@string/YOLOv3_model_file</item>
        <item>@string/YOLOv3_config_file</item>
    </string-array>
    <string-array name="weights_url">
        <item>@string/MobileNetSSD_model_file_url</item>
        <item>@string/MobileNetSSD_config_file_url</item>
        <item>@string/YOLOv3_model_file_url</item>
        <item>@string/YOLOv3_config_file_url</item>
    </string-array>
    <string-array name="weights_name">
        <item>@string/MobileNetSSD_model_name</item>
        <item>@string/MobileNetSSD_config_name</item>
        <item>@string/YOLOv3_model_name</item>
        <item>@string/YOLOv3_config_name</item>
    </string-array>
</resources>
